<resources>
    <string name="app_name">Shifa</string>
    <string name="google_map_api_key" translatable="false">AIzaSyAKK4DzjELVUwt_lOLgbIYEW2aPlJfLQN8</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="logout_menu">Logout</string>
    <string name="some_error">Some error occurred, please try again later!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lorem">لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبورأنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوأكسير سيتاشن يللأمكو لابورأس نيسي يت أليكيوب أكس أيا كوممودو كونسيكيوات . ديواسأيوتي أريري دولار إن ريبريهينديرأيت فوليوبتاتي فيلايت أيسسي كايلليوم دولار أيو فيجايت</string>
    <string name="rate_us">Rate us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="app_google_play_store_link" translatable="false">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link" translatable="false">"market://details?id="</string>
    <string name="submit">Submit</string>
    <string name="login_drawer">Login</string>
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="settings_menu">Settings</string>
    <string name="current_location">My current location</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="select_language_ar" translatable="false">اختر اللغة</string>
    <string name="select_language_en" translatable="false">Select Language</string>
    <string name="skip">Skip</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_new_account">Create New Account</string>
    <string name="new_account"><u>New Account</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="restore_password"><u>Restore Password</u></string>
    <string name="chat_text">Chat</string>
    <string name="search_place_hint">Search for a place</string>
    <string name="place_name">Place name</string>
    <string name="save">Save</string>
    <string name="open_gps">Please activate GPS</string>
    <string name="no_address_found">No address found</string>
    <string name="invalid_region">Invalid region</string>
    <string name="next">Next</string>
    <string name="add_comment">Add comment</string>
    <string name="write_comment">Add comment or notes</string>
    <string name="order_details">Order Details</string>
    <string name="i_accept_terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="verify_account">Verify Account</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="enter_verification_code_sent_you_at">Enter verification code sent you at</string>
    <string name="code_not_received">Code not received?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_lined"><u>Privacy policy</u></string>
    <string name="terms">Terms and conditions</string>
    <string name="faqs">FAQs</string>
    <string name="how_it_works">How it works</string>
    <string name="share_app">Share App</string>
    <string name="message_type">Message type</string>
    <string name="message_title">Message title</string>
    <string name="message_text">Message text</string>
    <string name="please_write_message_text">Please write message text</string>
    <string name="send">Send</string>
    <string name="sr">SR</string>
    <string name="order_number">Order number</string>
    <string name="order_date">Order date</string>
    <string name="order_price">Order price</string>
    <string name="e_payment">E-payment</string>
    <string name="slide_to_cancel">Swipe to cancel</string>
    <string name="write_ur_msg">Write your message</string>
    <string name="notifications">Notifications</string>
    <string name="empty_mobile">Mobile can\'t be empty</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="invalid_password">Password length must be 8 to 12 digits</string>
    <string name="accept_terms_to_continue">Please accept terms and conditions to continue</string>
    <string name="empty_code">Code can\'t be empty</string>
    <string name="after">After</string>
    <string name="seconds">seconds</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_account_successfully_activated">Your account successfully activated</string>
    <string name="please_complete_your_profile_information">Please, complete your profile information</string>
    <string name="ok">OK</string>
    <string name="empty_full_name">Full name can\'t be empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_msg_title">Message title can\'t be empty</string>
    <string name="empty_msg_text">Message text can\'t be empty</string>
    <string name="phone_entry">Enter your mobile number</string>
    <string name="phone_entry_info">Please enter your registered mobile number</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_new_password">Enter the new password</string>
    <string name="please_enter_the_new_password">Please enter the new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="passwords_not_matched">Passwords are not match</string>
    <string name="am_text">AM</string>
    <string name="pm_text">PM</string>
    <string name="all">All</string>
    <string name="toggle_language">عربي</string>
    <string name="back">Back</string>
    <string name="empty_place_name">Place name can\'t be empty</string>
    <string name="please_login">Please login to continue</string>
    <string name="canceled">Canceled</string>
    <string name="recording">Recording</string>
    <string name="error">Error</string>
    <string name="go_to_login">Login</string>
    <string name="login_warning">Please login to continue</string>
    <string name="mobile_number_hint">Mobile number</string>
    <string name="complete_your_profile_to_continue">Please complete you profile information to continue</string>
    <string name="n_a">N/A</string>
    <string name="invalid_mobile_prefix">Mobile number must start with 05</string>
    <string name="check_internet_conn">Check your internet connection</string>
    <string name="weak_internet_conn">Your internet connection is weak, please try again later!</string>
    <string name="login_again">Please Login Again</string>
    <string name="login_to_continue">Please login to proceed</string>
    <string name="your_account_deleted">Your account has been deleted .. Please contact the admin</string>
    <string name="location_is_required">Location permission is required</string>
    <string name="go_to_app_settings">Go to app settings</string>
    <string name="mic_is_required">Microphone is required</string>
    <string name="you">You</string>
    <string name="verify_code">Verify code</string>
    <string name="enter_verify_code">Enter verify code</string>
    <string name="contact_us">Contact us</string>
    <string name="welcome">Welcome</string>
    <string name="my_favorites">Favorites</string>
    <string name="my_account">Account</string>
    <string name="search">Search</string>
    <string name="filter_results">Filter results</string>
    <string name="day">Day</string>
    <string name="old_password">Old password</string>
    <string name="address_txt">Address</string>
    <string name="rate">Rating</string>
    <string name="name">Name</string>
    <string name="location_rationale">Location permission is required to get your current location</string>
    <string name="wrong_password">Wrong old password</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="for_android">For Android</string>
    <string name="for_ios">For iPhone</string>
    <string name="share_via">Share via</string>
    <string name="do_not_have_account">No account?</string>
    <string name="welcome_visitor">Welcome visitor</string>
    <string name="accept_terms_msg">By registering in the application, you agree to</string>
    <string name="accept_privacy_msg">And also accept</string>
    <string name="of_app">of the application</string>
    <string name="personal_quote">Personal profile</string>
    <string name="areas">Areas</string>
    <string name="commission">Commission</string>
    <string name="add_commercial">Add a business</string>
    <string name="join_at">Joined in</string>
    <string name="map">Map</string>
    <string name="filter">filter</string>
    <string name="list">List</string>
    <string name="recent">Recently</string>
    <string name="low_to_high_price">Price from low to high</string>
    <string name="show_commercial_places">Show commercial places</string>
    <string name="show_orders">Show orders</string>
    <string name="add_your_ad">Add your ad</string>
    <string name="add_add_desc">Offer your property for sale or rent</string>
    <string name="add_your_order">Add your order</string>
    <string name="add_order_desc">You can register your order in the application to receive replies</string>
    <string name="riyadh">Riyadh</string>
    <string name="mecca">Meccah</string>
    <string name="select_bank">Please select bank</string>
    <string name="commissions_calc">Commission calculation</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="commission_deserved">Deserved commission</string>
    <string name="app_commission_form">Commission transfer form</string>
    <string name="comm_after">After sending the amount, you must contact us via the following form in order to register the commission in the name of your membership to obtain the site\'s features for customers.</string>
    <string name="comm_amount">Commission amount</string>
    <string name="comm_bank">The bank to which the transfer was made</string>
    <string name="comm_time">When was the transfer done?</string>
    <string name="comm_name">Transferer name</string>
    <string name="notes">Notes</string>
    <string name="msg_comm">The commission transfer form has been submitted and successfully registered with your membership</string>
    <string name="error_empty_amount">The commission amount is empty</string>
    <string name="property_desc">Property Description</string>
    <string name="areas2">Area</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter the price</string>
    <string name="enter_property_desc">Enter additional property description</string>
    <string name="advertiser_relation">Advertiser\'s relationship</string>
    <string name="owner">Owner</string>
    <string name="agent">Agent</string>
    <string name="marketer">Marketer</string>
    <string name="own_percentage">Ownership percentage</string>
    <string name="accept_terms_and_commission">I agree to the terms of use and commit to pay the commission</string>
    <string name="publish_ad">Publish the ad</string>
    <string name="ad_name">Ad name</string>
    <string name="area_in_meter">Area in meter</string>
    <string name="categories">Categories</string>
</resources>