<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/ad_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAdName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_corner_gray_stroke_low"
                android:gravity="center_vertical"
                android:hint="@string/ad_name"
                android:inputType="text"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:text="@string/area_in_meter"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etArea"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_corner_gray_stroke_low"
                android:gravity="center_vertical"
                android:hint="@string/areas2"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_corner_gray_stroke_low"
                android:gravity="center_vertical"
                android:hint="@string/enter_price"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:text="@string/property_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_corner_gray_stroke_low"
                android:gravity="top"
                android:hint="@string/enter_property_desc"
                android:padding="@dimen/_4sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:text="@string/advertiser_relation"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbOwner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/owner"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_10ssp" />

                <RadioButton
                    android:id="@+id/rbAgent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/agent"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_10ssp" />

                <RadioButton
                    android:id="@+id/rbMarketer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketer"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_10ssp" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvOwnerPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:text="@string/own_percentage"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llPercent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/corner_border_rect_gray"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPercentage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/own_percentage"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="%"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbAcceptTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:text="@string/accept_terms_and_commission"
                android:textColor="@color/colorGrayDarker"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_24sdp"
                android:background="@drawable/round_button_bg"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/publish_ad"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>